--- a/FE/package.json
+++ b/FE/package.json
@@ -14,6 +14,7 @@
     "@webcontainer/api": "^1.5.1-internal.6",
     "axios": "^1.7.9",
     "jsonwebtoken": "^9.0.2",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
