--- a/Model/requirements.txt
+++ b/Model/requirements.txt
@@ -1,7 +1,7 @@
-crewai==0.1.7 
+crewai==0.119.0
 fastapi==0.115.12
-langchain_groq==0.1.10
-pydantic==2.10.6
-python-dotenv==1.0.1
-requests==2.32.3
-uvicorn==0.33.0
+langchain_groq==0.3.2
+pydantic==2.11.4
+python-dotenv==1.1.0
+Requests==2.32.3
+uvicorn==0.34.2
